Fixed logo spacing

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -123,6 +123,7 @@ h2 span {
 #labs {
 	width: 100%;
 	max-width: 300px;
+	padding: 10px 0;
 }
 
 @media (--narrow-window) {
